remove spaces from name in package.json... ...because they were causing the deply to Bluemix to fail.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "The Super Duper To-do List App",
+	"name": "TheSuperDuperToDoListApp",
 	"version": "0.0.1",
 	"description": "An educational project",
 	"scripts": {
