--- a/bower.json
+++ b/bower.json
@@ -14,17 +14,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
-
-  {
-  "name": "todoAngularApp",
+  ],
   "dependencies": {
-    "angular-bootstrap": "~0.11.0",
-    "angular-moment": "~0.7.1",
-    "angular-route": "~1.2.17",
-    "angular": "1.2.19",
-    "angular-mocks": "~1.2.21",
-    "jquery": "~2.1.3",
-    "bootstrap": "~3.3.5"
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.5",
+    "angular": "~1.4.7",
+    "angular-resource": "~1.4.7"
   }
 }
